--- a/pepper/templates/users/dashboard/waitlisted.html
+++ b/pepper/templates/users/dashboard/waitlisted.html
@@ -3,17 +3,20 @@
     <div class="center col-md-8 col-md-offset-2">
         <h1>Your {{ config.HACKATHON_NAME }} Decision</h1>
         <div class="large-text">
-          <p>Thanks for applying to {{ config.HACKATHON_NAME }}. This year we had many more applicants than we had space for,
-          but we're still hoping that we can fit you in so we put you on the waitlist. Make sure to keep an eye out on
-          your email, as we send out invites to people on the waitlist.</p>
-          <p>While we wish we could accept everyone who applies for {{ config.HACKATHON_NAME }}, there's a limited amount of
-          space and it wouldn't be fun for anyone if it got too crowded. If you don't get in, we'd still be delighted for
-          you to join us as a <a href="https://goo.gl/forms/mx5fnYjohpI3AI4Y2" class="decorate">volunteer</a> or a <a href="https://goo.gl/forms/wi8cZ6dglqKvfdsC2" class="decorate">mentor</a>!</p>
-          <p>Applications for {{ config.HACKATHON_NAME }} are first-come, first-serve for teams and randomized for individuals. This decision is not a reflection of your resume or your experience level. We simply take that information to run our own internal metrics and share your resume with companies who are recruiting. Cross your fingers though! There will be a second round of acceptances on October 17th. If you live in the Austin metro area, we encourage you to try to walk-in on the day of {{ config.HACKATHON_NAME }}, October 28.</p>
-          <h2>How do walk-ins work?</h2>
-          <p>
-          Our check-in for accepted hackers will run from about 10am-noon. If we still have extra spots (last year we had around 100 extra spots), you can try to get in as a waitlisted hacker around noon. An official schedule for walk-ins will come out on our website soon. You can also check our website on October 28, on which we will have a banner that states whether we have space for waitlisted hackers. This way, you won't need to head all the way down to the Omni.
-          </p>
+          <p>Thank you for taking the time to apply to {{ config.EVENT_NAME }}. Unfortunately, we had many more applicants than we have 
+            space for, and we are unable to offer you a spot for this year. However, we're still hoping that we can fit you in, so we 
+            have made you eligible for our <strong>day-of waitlist</strong>.</p>
+          <p>This decision is not a reflection of your resume or your experience level. While wish we could accept everyone who applied, 
+            there's a limited amount of space and it wouldn't be fun for anyone if it got too crowded. But there's still hope - on 
+            {{ config.EVENT_START }}, we will be announcing whether we still have spots open for {{ config.EVENT_NAME }} <strong>after 
+            accepted attendee check-in closes at noon. </strong> If so, then we will begin taking walk-ins at this time. Keep an eye out 
+            for an announcement on our website (via a banner), via our social media, or email!</p>
+          <p>If you are local to Austin, TX, we would be delighted to have you join us as a volunteer or mentor. If you are interested in
+            serving in either capacity, please fill out <a href="https://goo.gl/forms/4enbcuIAD8MTOkpn2">this form</a> and we'll get
+            back to you soon.</p>
+          <p>Thanks again for your interest! We would love to see you apply again next year, but in the meantime, we highly encourage you 
+            to continue learning and creating amazing things.</p>
+          <br/><p>♥ Freetail Hackers</p>
         </div>
     </div>
 {% endblock %}
