Typo fix for emails/portals

--- a/pepper/templates/emails/application_decisions/rejected.html
+++ b/pepper/templates/emails/application_decisions/rejected.html
@@ -8,7 +8,7 @@
     <tr>
         <td class="content-block">
             Thank you for taking the time to apply to {{ config.EVENT_NAME }}. Unfortunately, we are unable to offer you 
-            a spot this year. This decision is not a reflection of your resume or your experience level. While wish we could accept 
+            a spot this year. This decision is not a reflection of your resume or your experience level. While we wish we could accept
             everyone who applied, there's a limited amount of space and it wouldn't be fun for anyone if it got too crowded. 
         </td>
     </tr>
