--- a/pepper/templates/users/dashboard/rejected.html
+++ b/pepper/templates/users/dashboard/rejected.html
@@ -5,7 +5,7 @@
         <div class="large-text">
             {% block decision %}
                 <p>Thank you for taking the time to apply to {{ config.EVENT_NAME }}. Unfortunately, we are unable to offer you 
-                    a spot this year. This decision is not a reflection of your resume or your experience level. While wish we could accept 
+                    a spot this year. This decision is not a reflection of your resume or your experience level. While we wish we could accept
                     everyone who applied, there's a limited amount of space and it wouldn't be fun for anyone if it got too crowded.</p>
                 <p>If you are local to Austin, TX, we are still looking for volunteers and mentors to help us out. If you are interested in
                     serving in either capacity, please fill out <a href="https://goo.gl/forms/4enbcuIAD8MTOkpn2">this form</a> and we'll get
