More fixes before acceptances

--- a/pepper/templates/emails/application_decisions/accepted.html
+++ b/pepper/templates/emails/application_decisions/accepted.html
@@ -19,7 +19,7 @@
                     distributing these based on availability and plan to cap the amount per individual/car at $50.
                 </li>
             </ul>
-            You <strong> MUST take action by 11:59pm on Friday, October 12</strong> to confirm your attendance. If you have not taken
+            You <strong> MUST take action by 11:59PM CT on Saturday, October 13</strong> to confirm your attendance. If you have not taken
             action by then, your invitation will be released to another student. Please note that no exceptions will be made if you 
             fail to confirm within the deadline.
         </td>
