--- a/pepper/templates/emails/application_decisions/waitlisted-initial.html
+++ b/pepper/templates/emails/application_decisions/waitlisted-initial.html
@@ -8,9 +8,14 @@
     <tr>
       <td class="content-block">
         Thank you for taking the time to apply to {{ config.EVENT_NAME }}. Unfortunately, we had many more applicants
-        than we have space for and we are unable to offer you a spot at this moment. However, there is a good chance 
-        we can still find a space for you. Acceptances are released in waves, so we will let you know in a few days 
-        if a spot opens up!
+        than we have space for and we are unable to offer you a spot at this moment. However, there is still a chance
+        we can find space for you. Acceptances are released in waves, so we will let you know in the coming weeks in case a spot opens up.
+      </td>
+    </tr>
+    <tr>
+      <td class="content-block">
+        This decision is not a reflection of your resume or your experience level. While we wish we could accept everyone who applied,
+            there's a limited amount of space and it wouldn't be fun for anyone if it got too crowded.
       </td>
     </tr>
     <tr>
