--- a/pepper/templates/users/dashboard/rejected.html
+++ b/pepper/templates/users/dashboard/rejected.html
@@ -8,7 +8,7 @@
                     a spot this year. This decision is not a reflection of your resume or your experience level. While we wish we could accept
                     everyone who applied, there's a limited amount of space and it wouldn't be fun for anyone if it got too crowded.</p>
                 <p>If you are local to Austin, TX, we are still looking for volunteers and mentors to help us out. If you are interested in
-                    serving in either capacity, please fill out <a href="https://goo.gl/forms/4enbcuIAD8MTOkpn2">this form</a> and we'll get
+                    serving in either capacity, please fill out <a href="https://goo.gl/forms/4enbcuIAD8MTOkpn2" class="decorate">this form</a> and we'll get
                     back to you soon.</p>
                 <p>Thanks again for your interest! We would love to see you apply again next year, but in the meantime, we highly encourage 
                     you to continue learning and creating amazing things.</p>
