--- a/pepper/templates/users/dashboard/waitlisted.html
+++ b/pepper/templates/users/dashboard/waitlisted.html
@@ -3,19 +3,14 @@
     <div class="center col-md-8 col-md-offset-2">
         <h1>Your {{ config.HACKATHON_NAME }} Decision</h1>
         <div class="large-text">
-          <p>Thank you for taking the time to apply to {{ config.EVENT_NAME }}. Unfortunately, we had many more applicants than we have 
-            space for, and we are unable to offer you a spot for this year. However, we're still hoping that we can fit you in, so we 
-            have made you eligible for our <strong>day-of waitlist</strong>.</p>
-          <p>This decision is not a reflection of your resume or your experience level. While wish we could accept everyone who applied, 
-            there's a limited amount of space and it wouldn't be fun for anyone if it got too crowded. But there's still hope - on 
-            {{ config.EVENT_START }}, we will be announcing whether we still have spots open for {{ config.EVENT_NAME }} <strong>after 
-            accepted attendee check-in closes at noon. </strong> If so, then we will begin taking walk-ins at this time. Keep an eye out 
-            for an announcement on our website (via a banner), via our social media, or email!</p>
-          <p>If you are local to Austin, TX, we would be delighted to have you join us as a volunteer or mentor. If you are interested in
-            serving in either capacity, please fill out <a href="https://goo.gl/forms/4enbcuIAD8MTOkpn2">this form</a> and we'll get
+          <p>Thank you for taking the time to apply to {{ config.EVENT_NAME }}. Unfortunately, we had many more applicants
+        than we have space for and we are unable to offer you a spot at this moment. However, there is still a chance
+        we can find space for you. Acceptances are released in waves, so we will let you know in the coming weeks in case a spot opens up.</p>
+          <p>This decision is not a reflection of your resume or your experience level. While we wish we could accept everyone who applied,
+            there's a limited amount of space and it wouldn't be fun for anyone if it got too crowded. </p>
+          <p>If you are local to Austin, TX, or we would be delighted to have you join us as a volunteer or mentor. If you are interested in
+            serving in either capacity, please fill out <a href="https://goo.gl/forms/4enbcuIAD8MTOkpn2" class="decorate">this form</a> and we'll get
             back to you soon.</p>
-          <p>Thanks again for your interest! We would love to see you apply again next year, but in the meantime, we highly encourage you 
-            to continue learning and creating amazing things.</p>
           <br/><p>♥ Freetail Hackers</p>
         </div>
     </div>
