emails pictures for decisions

--- a/pepper/templates/emails/application_decisions/waitlisted-initial.html
+++ b/pepper/templates/emails/application_decisions/waitlisted-initial.html
@@ -1,4 +1,4 @@
-{% extends 'emails/base.html' %}
+{% extends 'emails/application_decisions/base.html' %}
 {% block message %}
     <tr>
       <td class="content-block">
