--- a/pepper/templates/emails/application_decisions/base.html
+++ b/pepper/templates/emails/application_decisions/base.html
@@ -21,7 +21,7 @@
                 <table class="main" width="100%" cellpadding="0" cellspacing="0">
                     <tr>
                         <td class="alert alert-neutral">
-                            <img src="{{ config.BASE_URL }}/branding/logo_small.png" width=183
+                            <img src="{{ config.BASE_URL }}/static/branding/logo_small.png" width=183
                                  height=50>
                         </td>
                     </tr>
@@ -48,9 +48,9 @@
                                 <a href="https://facebook.com/HackTX"><img
                                         src="{{ config.BASE_URL }}/static/img/social/fb.png"></a>
                                 <a href="https://twitter.com/HackTX"><img
-                                        src="{{ config.BASE_URL }}/img/social/twitter.png"></a>
+                                        src="{{ config.BASE_URL }}/static/img/social/twitter.png"></a>
                                 <a href="https://github.com/HackTX"><img
-                                        src="{{ config.BASE_URL }}/img/social/github.png"></a>
+                                        src="{{ config.BASE_URL }}/static/img/social/github.png"></a>
                             </td>
                         </tr>
                     </table>
