final changes to preevent email script

--- a/pepper/templates/emails/application_decisions/preevent.html
+++ b/pepper/templates/emails/application_decisions/preevent.html
@@ -40,8 +40,8 @@
     <tr>
         <td class="content-block">
             <strong>Communication</strong>
-            <p>Please join the <a href="http://bit.ly/2RS6roZ">attendee slack</a>. We'll be sending out announcements day-of on this and you can also use this to find teams and/or carpools before the event.</p>
-            <p>If you do not have a team and are seeking one, please utilize our social media pages to find other team members. If not, you will also have the opportunity to find a team at the event.</p>
+            <p>Please join the <a href="http://bit.ly/2RS6roZ">attendee slack</a>. We'll be sending out announcements day-of on this and we encourage you to set up the workspace on your mobile phones. We have a #carpool channel if you're looking to travel from outside of Austin and looking/offering rides.</p>
+            <p>If you do not have a team and are seeking one, please utilize our social media pages or #team-matching channel on Slack to find other team members. If not, you will also have the opportunity to find a team at the event.</p>
         </td>
     </tr>
     <tr>
