forgot to change itinerary to day of event website

--- a/pepper/templates/emails/application_decisions/preevent.html
+++ b/pepper/templates/emails/application_decisions/preevent.html
@@ -34,7 +34,7 @@
     <tr>
         <td class="content-block">
             <strong>Schedule</strong>
-            <p>For a full rundown of our schedule, check out the <a href="https://hacktx.com/">HackTX</a> website and the <a href="https://go.hacktx.com">itinerary</a>.</p>
+            <p>For a full rundown of our schedule, check out the <a href="https://hacktx.com/">HackTX</a> website and the <a href="https://go.hacktx.com">day of event</a> website.</p>
         </td>
     </tr>
     <tr>
