--- a/pepper/templates/emails/application_decisions/preevent.html
+++ b/pepper/templates/emails/application_decisions/preevent.html
@@ -40,14 +40,14 @@
     <tr>
         <td class="content-block">
             <strong>Communication</strong>
-            <p>Please join the <a href="http://bit.ly/2RS6roZ">attendee slack</a>. We'll be sending out announcements day-of on this and we encourage you to set up the workspace on your mobile phones. We have a #carpool channel if you're looking to travel from outside of Austin and looking/offering rides.</p>
-            <p>If you do not have a team and are seeking one, please utilize our social media pages or #team-matching channel on Slack to find other team members. If not, you will also have the opportunity to find a team at the event.</p>
+            <p>Please join the <a href="http://bit.ly/2RS6roZ">attendee slack</a>. We'll be sending out announcements day-of on this and we encourage you to set up the workspace on your mobile phones. We have a #carpool channel if you're traveling from outside of Austin and looking for/offering rides.</p>
+            <p>If you do not have a team and are seeking one, please utilize our social media pages or the #team-matching channel on Slack to find other team members. If not, you will also have the opportunity to find a team at the event.</p>
         </td>
     </tr>
     <tr>
         <td class="content-block">
             <strong>Pre-HackTX Workshop</strong>
-            <p>If you’re around in Austin, we encourage you to drop by the “Crash Course: Build a Single-Page-App” workshop hosted by Freetail Hackers and MAD. The workshop will be held on Thursday, October 18 from 6:00 PM - 7:00 PM in GDC 2.502.</p>
+            <p>If you’re around in Austin, we encourage you to drop by the <a href="https://www.facebook.com/events/373683419839401/">Crash Course: Build a Single-Page-App workshop</a> hosted by Freetail Hackers and MAD. The workshop will be held on Thursday, October 18 from 6:00 PM - 7:00 PM in GDC 2.502.</p>
         </td>
     </tr>
     <tr>
