final email clean up

--- a/pepper/templates/emails/application_decisions/freetail_recruitment.html
+++ b/pepper/templates/emails/application_decisions/freetail_recruitment.html
@@ -77,6 +77,7 @@
     </tr>
     <tr>
         <td class="content-block">
+            <strong>Contact</strong>
             If you have any questions, you can check out our 
             <a href="https://www.facebook.com/freetailhackers/">
                 facebook page
